WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215772
REGRESSION (
r266028
): platform/ios/ios/fast/coordinates/range-client-rects.html
https://bugs.webkit.org/show_bug.cgi?id=215772
Summary
REGRESSION (r266028): platform/ios/ios/fast/coordinates/range-client-rects.html
Aakash Jain
Reported
2020-08-24 10:08:36 PDT
platform/ios/ios/fast/coordinates/range-client-rects.html seems to be broken on iOS since
r266028
. History:
https://results.webkit.org/?suite=layout-tests&test=platform%2Fios%2Fios%2Ffast%2Fcoordinates%2Frange-client-rects.html
e.g.:
https://ews-build.s3-us-west-2.amazonaws.com/iOS-13-Simulator-WK2-Tests-EWS/r407098-24207-clean-tree/platform/ios/ios/fast/coordinates/range-client-rects-diff.txt
-PASS range.getClientRects().length is 2 +FAIL range.getClientRects().length should be 2. Was 1. unscaled PASS clientRect.left is 0 PASS clientRect.right is 1500 @@ -8,18 +8,18 @@ PASS clientRect.bottom is 1500 PASS clientRect.width is 1500 PASS clientRect.height is 1500 -PASS clientRect.left is 0 -PASS clientRect.right is 1500 -PASS clientRect.top is 0 -PASS clientRect.bottom is 1500 -PASS clientRect.width is 1500 -PASS clientRect.height is 1500 -PASS clientRect.left is 100 -PASS clientRect.right is 200 -PASS clientRect.top is 100 -PASS clientRect.bottom is 200 -PASS clientRect.width is 100 -PASS clientRect.height is 100 +FAIL clientRect.left should be 0. Threw exception TypeError: undefined is not an object (evaluating 'clientRect.left') +FAIL clientRect.right should be 1500. Threw exception TypeError: undefined is not an object (evaluating 'clientRect.right') +FAIL clientRect.top should be 0. Threw exception TypeError: undefined is not an object (evaluating 'clientRect.top') +FAIL clientRect.bottom should be 1500. Threw exception TypeError: undefined is not an object (evaluating 'clientRect.bottom') +FAIL clientRect.width should be 1500. Threw exception TypeError: undefined is not an object (evaluating 'clientRect.width') +FAIL clientRect.height should be 1500. Threw exception TypeError: undefined is not an object (evaluating 'clientRect.height') +FAIL clientRect.left should be 100. Was 0. +FAIL clientRect.right should be 200. Was 1500. +FAIL clientRect.top should be 100. Was 0. +FAIL clientRect.bottom should be 200. Was 1500. +FAIL clientRect.width should be 100. Was 1500. +FAIL clientRect.height should be 100. Was 1500.
Attachments
Patch
(19.13 KB, patch)
2020-08-24 18:55 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(20.07 KB, patch)
2020-08-24 18:58 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(20.77 KB, patch)
2020-08-24 19:54 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Hector Lopez
Comment 1
2020-08-24 10:32:44 PDT
Test expectation while investigated:
https://trac.webkit.org/changeset/266073/webkit
Darin Adler
Comment 2
2020-08-24 11:03:37 PDT
Strange; I saw this with an earlier version of my patch, but I thought I had fixed it. Note that we don’t see the failure in EWS.
Darin Adler
Comment 3
2020-08-24 11:03:55 PDT
Any clue why we didn’t see the failure in EWS?
Aakash Jain
Comment 4
2020-08-24 11:11:58 PDT
(In reply to Darin Adler from
comment #3
)
> Any clue why we didn’t see the failure in EWS?
Yeah, I tried to explain in
https://bugs.webkit.org/show_bug.cgi?id=215677#c11
Basically ios-wk2 EWS was broken for some time late last week, showing green bubbles while the tests weren't even run (due to
Bug 215742
). I am going to fix EWS, so that in such infrastructure failures it doesn't show green bubbles, and instead keep re-trying.
Darin Adler
Comment 5
2020-08-24 12:10:28 PDT
I”ll work on fixing this. As long as no one merges this to the branch, we have some time to get it fixed.
Radar WebKit Bug Importer
Comment 6
2020-08-24 17:15:16 PDT
<
rdar://problem/67708183
>
Darin Adler
Comment 7
2020-08-24 17:26:17 PDT
This test is peculiar. The whole thing runs just fine cross-platform. It's just that the meta tag for zooming has no effect on platforms like Mac. But the bug/regression reproduces everywhere and has nothing to do with the zooming. I think we should consider moving it out of the platform/ios/ios directory into a cross-platform directory.
Alexey Proskuryakov
Comment 8
2020-08-24 17:41:59 PDT
I tried to follow the history to see why it was iOS-only, but had to stop at
r167371
(moving from Internal).
Darin Adler
Comment 9
2020-08-24 17:49:04 PDT
I think the intent was to check the meta tag behavior and there just happens to be no similar bug elsewhere.
Darin Adler
Comment 10
2020-08-24 18:55:01 PDT
Comment hidden (obsolete)
Created
attachment 407158
[details]
Patch
Darin Adler
Comment 11
2020-08-24 18:58:22 PDT
Comment hidden (obsolete)
Created
attachment 407159
[details]
Patch
Darin Adler
Comment 12
2020-08-24 19:54:54 PDT
Created
attachment 407164
[details]
Patch
Darin Adler
Comment 13
2020-08-25 04:13:08 PDT
Ready for review now.
EWS
Comment 14
2020-08-25 09:32:30 PDT
Committed
r266123
: <
https://trac.webkit.org/changeset/266123
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407164
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug